--- a/package.json
+++ b/package.json
@@ -1,38 +1,60 @@
 {
-  "name": "ionic-simple",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "start": "ionic-app-scripts serve",
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
-  },
-  "dependencies": {
-    "@angular/animations": "5.2.11",
-    "@angular/common": "5.2.11",
-    "@angular/compiler": "5.2.11",
-    "@angular/compiler-cli": "5.2.11",
-    "@angular/core": "5.2.11",
-    "@angular/forms": "5.2.11",
-    "@angular/http": "5.2.11",
-    "@angular/platform-browser": "5.2.11",
-    "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.20.0",
-    "@ionic-native/splash-screen": "~4.20.0",
-    "@ionic-native/status-bar": "~4.20.0",
-    "@ionic/storage": "2.2.0",
-    "ionic-angular": "3.9.5",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "3.2.2",
-    "typescript": "~2.6.2"
-  },
-  "description": "An Ionic project"
+    "name": "ionic-simple",
+    "version": "0.0.1",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "start": "ionic-app-scripts serve",
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "test": "karma start ./test-config/karma.conf.js",
+        "test-ci": "karma start ./test-config/karma.conf.js --single-run",
+        "e2e-update": "webdriver-manager update --standalone false --gecko false",
+        "e2e-test": "protractor ./test-config/protractor.conf.js",
+        "e2e": "npm run e2e-update && npm run e2e-test"
+    },
+    "dependencies": {
+        "@angular/animations": "5.2.11",
+        "@angular/common": "5.2.11",
+        "@angular/compiler": "5.2.11",
+        "@angular/compiler-cli": "5.2.11",
+        "@angular/core": "5.2.11",
+        "@angular/forms": "5.2.11",
+        "@angular/http": "5.2.11",
+        "@angular/platform-browser": "5.2.11",
+        "@angular/platform-browser-dynamic": "5.2.11",
+        "@ionic-native/core": "~4.20.0",
+        "@ionic-native/splash-screen": "~4.20.0",
+        "@ionic-native/status-bar": "~4.20.0",
+        "@ionic/storage": "2.2.0",
+        "ionic-angular": "3.9.5",
+        "ionicons": "3.0.0",
+        "rxjs": "5.5.11",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.29"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "^2.1.3",
+        "@types/node": "^7.0.8",
+        "@types/jasmine": "^2.5.41",
+        "angular2-template-loader": "^0.6.2",
+        "html-loader": "^0.4.5",
+        "ionic": "3.9.2",
+        "jasmine": "^2.5.3",
+        "jasmine-spec-reporter": "^4.1.0",
+        "karma": "^1.5.0",
+        "karma-chrome-launcher": "^2.0.0",
+        "karma-jasmine": "^1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-webpack": "^2.0.3",
+        "null-loader": "^0.1.1",
+        "protractor": "^5.1.1",
+        "ts-loader": "^2.0.3",
+        "ts-node": "^3.0.2",
+        "typescript": "~2.8.0"
+    },
+    "description": "An Ionic project"
 }
